--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <h1>💸 Mini-Budget-Tracker</h1>
     <div class="saldo" id="saldo"></div>
     <form class="add-form" id="addForm">
-      <input type="number" step="0.01" id="amount" placeholder="Betrag (€)" required>
+      <input type="number" step="0.01" inputmode="decimal" id="amount" placeholder="Betrag (€)" required>
       <select id="category">
         <option value="Essen">Essen</option>
         <option value="Fitness">Fitness</option>
@@ -110,4 +110,121 @@
       filtered.slice().reverse().forEach((e, i) => {
         const tr = document.createElement('tr');
         tr.className = e.type === 'income' ? 'income' : 'expense';
-       
+        tr.innerHTML = `
+          <td>${e.date}</td>
+          <td>${e.category}</td>
+          <td>${e.type === 'income' ? '+' : '-'}${e.amount.toFixed(2)}</td>
+          <td>${e.type === 'income' ? 'Einnahme' : 'Ausgabe'}</td>
+          <td>${e.desc || ''}</td>
+          <td><button onclick="deleteEntry(${entries.length - 1 - i})">✕</button></td>
+        `;
+        tbody.appendChild(tr);
+      });
+    }
+
+    function deleteEntry(idx) {
+      let entries = getEntries();
+      entries.splice(idx, 1);
+      saveEntries(entries);
+      loadAndRender();
+    }
+
+    function loadAndRender() {
+      let entries = getEntries();
+      const filterCat = document.getElementById('filterCat').value;
+      updateSaldo(entries);
+      renderHistory(entries, filterCat);
+      renderChart(entries, filterCat);
+      // Set today's date on reload if empty
+      const dateInput = document.getElementById('date');
+      if (!dateInput.value) {
+        dateInput.value = new Date().toISOString().slice(0,10);
+      }
+    }
+
+    document.getElementById('addForm').addEventListener('submit', function(e) {
+      e.preventDefault();
+      let entries = getEntries();
+      const amount = parseFloat(document.getElementById('amount').value);
+      const category = document.getElementById('category').value;
+      const desc = document.getElementById('desc').value;
+      const date = document.getElementById('date').value;
+      const type = document.getElementById('type').value;
+      entries.push({amount, category, desc, date, type});
+      saveEntries(entries);
+      this.reset();
+      // Set today's date after reset
+      document.getElementById('date').value = new Date().toISOString().slice(0,10);
+      loadAndRender();
+    });
+
+    document.getElementById('filterCat').addEventListener('change', loadAndRender);
+
+    // Chart.js Graph: Verlauf über die Zeit
+    let chart;
+    function renderChart(entries, filterCat) {
+      let filtered = filterCat ? entries.filter(e => e.category === filterCat) : entries;
+      filtered = filtered.slice().sort((a, b) => a.date.localeCompare(b.date));
+      let saldo = 0;
+      let labels = [];
+      let data = [];
+      filtered.forEach(e => {
+        saldo += e.type === 'income' ? e.amount : -e.amount;
+        labels.push(e.date);
+        data.push(saldo);
+      });
+      if (chart) chart.destroy();
+      chart = new Chart(document.getElementById('chart'), {
+        type: 'line',
+        data: {
+          labels,
+          datasets: [{label: 'Verlauf', data, fill: false}]
+        },
+        options: {responsive: true, plugins: {legend: {display: false}}}
+      });
+    }
+
+    // Default today's date at page load
+    window.onload = function() {
+      document.getElementById('date').value = new Date().toISOString().slice(0,10);
+      loadAndRender();
+    };
+
+    // Backup/Export/Import
+    function exportData() {
+      const data = localStorage.getItem(STORAGE_KEY) || '[]';
+      const blob = new Blob([data], {type: 'application/json'});
+      const url = URL.createObjectURL(blob);
+      const a = document.createElement('a');
+      a.href = url;
+      a.download = 'budget-backup.json';
+      a.click();
+      URL.revokeObjectURL(url);
+    }
+
+    function importData(event) {
+      const file = event.target.files[0];
+      if (!file) return;
+      const reader = new FileReader();
+      reader.onload = function(e) {
+        try {
+          const data = JSON.parse(e.target.result);
+          if (Array.isArray(data)) {
+            localStorage.setItem(STORAGE_KEY, JSON.stringify(data));
+            loadAndRender();
+            alert("Backup erfolgreich importiert!");
+          } else {
+            alert("Ungültiges Backup-Format!");
+          }
+        } catch {
+          alert("Fehler beim Import!");
+        }
+      };
+      reader.readAsText(file);
+    }
+
+    window.deleteEntry = deleteEntry;
+
+  </script>
+</body>
+</html>
